Renamed all instances of Freemode to Trainig mode