@@ -2,28 +2,24 @@ package com.github.matsgemmeke.battlegrounds;
 
 import com.github.matsgemmeke.battlegrounds.api.BattleContextProvider;
 import com.github.matsgemmeke.battlegrounds.api.game.BattleContext;
-import com.github.matsgemmeke.battlegrounds.api.game.FreemodeContext;
 import com.github.matsgemmeke.battlegrounds.api.game.Session;
+import com.github.matsgemmeke.battlegrounds.api.game.TrainingMode;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class DefaultBattleContextProvider implements BattleContextProvider {
 
-    private List<FreemodeContext> freemodeContexts;
+    @NotNull
     private Map<Integer, Session> sessions;
+    @Nullable
+    private TrainingMode trainingMode;
 
     public DefaultBattleContextProvider() {
-        this.freemodeContexts = new ArrayList<>();
         this.sessions = new HashMap<>();
-    }
-
-    public boolean addFreemodeContext(@NotNull FreemodeContext context) {
-        return freemodeContexts.add(context);
     }
 
     public boolean addSession(@NotNull Session session) {
@@ -32,12 +28,19 @@ public class DefaultBattleContextProvider implements BattleContextProvider {
         return sessions.get(id) != null;
     }
 
+    public boolean assignTrainingMode(@NotNull TrainingMode trainingMode) {
+        if (this.trainingMode != null) {
+            return false;
+        }
+
+        this.trainingMode = trainingMode;
+        return true;
+    }
+
     @Nullable
-    public BattleContext getContext(Player player) {
-        for (FreemodeContext context : freemodeContexts) {
-            if (context.hasPlayer(player)) {
-                return context;
-            }
+    public BattleContext getContext(@NotNull Player player) {
+        if (trainingMode != null && trainingMode.hasPlayer(player)) {
+            return trainingMode;
         }
 
         for (Session session : sessions.values()) {
@@ -51,16 +54,12 @@ public class DefaultBattleContextProvider implements BattleContextProvider {
 
     @NotNull
     public Collection<BattleContext> getContexts() {
-        return Collections.unmodifiableList(Stream.concat(freemodeContexts.stream(), sessions.values().stream()).collect(Collectors.toList()));
+        return Stream.concat(Stream.of(trainingMode), sessions.values().stream()).toList();
     }
 
     @Nullable
     public Session getSession(int id) {
         return sessions.get(id);
-    }
-
-    public boolean removeFreemodeContext(@NotNull FreemodeContext context) {
-        return freemodeContexts.remove(context);
     }
 
     public boolean removeSession(@NotNull Session session) {
